// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetForm should render correctly 1`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Target name
      </p>
      <InputField
<<<<<<< HEAD:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
=======
        className="target-name-input"
>>>>>>> b25246a6a08e483ea3beb3773509373aaefa6819:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
        data-test="target-name-input"
        disabled={false}
        name="name"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <styled.div>
        <styled.div>
          <p>
            Resolver
          </p>
          <SelectField
<<<<<<< HEAD:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
=======
            className="resolver-select"
>>>>>>> b25246a6a08e483ea3beb3773509373aaefa6819:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
            data-test="resolver-select"
            name="resolver"
            onChange={[Function]}
            value="Simbad"
          >
            <option
              value="Simbad"
            >
              Simbad
            </option>
            <option
              value="NED"
            >
              NED
            </option>
            <option
              value="VizieR"
            >
              VizieR
            </option>
          </SelectField>
        </styled.div>
        <styled.div>
          <br />
          <button
            className="button is-info false"
            disabled={false}
            onClick={[Function]}
            title=""
            type="button"
          >
            resolve
          </button>
        </styled.div>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Right ascension
      </p>
      <InputField
        data-test="right-ascension-input"
        disabled={false}
        name="rightAscension"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <p>
        Declination
      </p>
      <InputField
        data-test="declination-input"
        disabled={false}
        name="declination"
        onChange={[Function]}
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Search radius
      </p>
      <InputField
        data-test="search-cone-radius-input"
        name="searchConeRadius"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <p>
        Radius units
      </p>
      <SelectField
        data-test="radius-units-select"
        name="radiusUnits"
        onChange={[Function]}
        value="arcseconds"
      >
        <option
          value="arcseconds"
        >
          Arcseconds
        </option>
        <option
          value="arcminutes"
        >
          Arcminutes
        </option>
        <option
          value="degrees"
        >
          Degrees
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`TargetForm should render correctly 2`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Target name
      </p>
      <InputField
<<<<<<< HEAD:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
=======
        className="target-name-input"
>>>>>>> b25246a6a08e483ea3beb3773509373aaefa6819:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
        data-test="target-name-input"
        disabled={false}
        name="name"
        onChange={[Function]}
        value="NGC 1234"
      />
    </styled.div>
    <styled.div>
      <styled.div>
        <styled.div>
          <p>
            Resolver
          </p>
          <SelectField
<<<<<<< HEAD:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
=======
            className="resolver-select"
>>>>>>> b25246a6a08e483ea3beb3773509373aaefa6819:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
            data-test="resolver-select"
            name="resolver"
            onChange={[Function]}
            value="Simbad"
          >
            <option
              value="Simbad"
            >
              Simbad
            </option>
            <option
              value="NED"
            >
              NED
            </option>
            <option
              value="VizieR"
            >
              VizieR
            </option>
          </SelectField>
        </styled.div>
        <styled.div>
          <br />
          <button
            className="button is-info false"
            disabled={false}
            onClick={[Function]}
            title=""
            type="button"
          >
            resolve
          </button>
        </styled.div>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Right ascension
      </p>
      <InputField
        data-test="right-ascension-input"
        disabled={false}
        name="rightAscension"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <p>
        Declination
      </p>
      <InputField
        data-test="declination-input"
        disabled={false}
        name="declination"
        onChange={[Function]}
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Search radius
      </p>
      <InputField
        data-test="search-cone-radius-input"
        name="searchConeRadius"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <p>
        Radius units
      </p>
      <SelectField
        data-test="radius-units-select"
        name="radiusUnits"
        onChange={[Function]}
        value="arcseconds"
      >
        <option
          value="arcseconds"
        >
          Arcseconds
        </option>
        <option
          value="arcminutes"
        >
          Arcminutes
        </option>
        <option
          value="degrees"
        >
          Degrees
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`TargetForm should render correctly 3`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Target name
      </p>
      <InputField
<<<<<<< HEAD:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
=======
        className="target-name-input"
>>>>>>> b25246a6a08e483ea3beb3773509373aaefa6819:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
        data-test="target-name-input"
        disabled={false}
        error="this is an error"
        name="name"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <styled.div>
        <styled.div>
          <p>
            Resolver
          </p>
          <SelectField
<<<<<<< HEAD:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
=======
            className="resolver-select"
>>>>>>> b25246a6a08e483ea3beb3773509373aaefa6819:src/__tests__/components/searchFormComponents/__snapshots__/TargetForm.test.tsx.snap
            data-test="resolver-select"
            name="resolver"
            onChange={[Function]}
            value="Simbad"
          >
            <option
              value="Simbad"
            >
              Simbad
            </option>
            <option
              value="NED"
            >
              NED
            </option>
            <option
              value="VizieR"
            >
              VizieR
            </option>
          </SelectField>
        </styled.div>
        <styled.div>
          <br />
          <button
            className="button is-info false"
            disabled={false}
            onClick={[Function]}
            title=""
            type="button"
          >
            resolve
          </button>
        </styled.div>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Right ascension
      </p>
      <InputField
        data-test="right-ascension-input"
        disabled={false}
        name="rightAscension"
        onChange={[Function]}
      />
    </styled.div>
    <styled.div>
      <p>
        Declination
      </p>
      <InputField
        data-test="declination-input"
        disabled={false}
        name="declination"
        onChange={[Function]}
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Search radius
      </p>
      <InputField
        data-test="search-cone-radius-input"
        name="searchConeRadius"
        onChange={[Function]}
        value="12.1"
      />
    </styled.div>
    <styled.div>
      <p>
        Radius units
      </p>
      <SelectField
        data-test="radius-units-select"
        name="radiusUnits"
        onChange={[Function]}
        value="arcminutes"
      >
        <option
          value="arcseconds"
        >
          Arcseconds
        </option>
        <option
          value="arcminutes"
        >
          Arcminutes
        </option>
        <option
          value="degrees"
        >
          Degrees
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
</Fragment>
`;
